projeto mistery letter - criterios 2 e 4 - npm test ok

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <input type="text" id="carta-texto">
+    <p>Clique <button id="criar-carta" onclick="criaCarta()"> aqui </button> para gerar a carta misteriosa!</p>
+    <p id="carta-gerada"></p>
 
     <script src="script.js"></script>
 </body>
