project mistery letter - criterio 18 - npm test ok

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <input type="text" id="carta-texto">
     <p>Clique <button id="criar-carta" onclick="criaCarta()"> aqui </button> para gerar a carta misteriosa!</p>
     <p id="carta-gerada"></p>
-
+    <p id="carta-contador"></p>
     <script src="script.js"></script>
 </body>
 </html>
